fe-app-nohelm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-app
  template:
    metadata:
      labels:
        app: fe-app
    spec:
      containers:
      - name: fe-app
        image: kimchanghyun/kch410:v1.0
        ports:
        - containerPort: 29000
        - containerPort: 29001
        - containerPort: 29002
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
