fe-app-nohelm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-app-main
spec:
  selector:
    app: fe-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 29000
---
apiVersion: v1
kind: Service
metadata:
  name: fe-app-admin
spec:
  selector:
    app: fe-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 29002
---
apiVersion: v1
kind: Service
metadata:
  name: fe-app-sysadmin
spec:
  selector:
    app: fe-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 29001
